certs/perl-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: perl
spec:
  tls:
  - hosts:
    - perl.192-168-99-100.nip.io
    secretName: perl
  rules:
  - host: perl.192-168-99-100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: perl
          servicePort: 5000
